# webcam-mouse

./: .gitignore  Cargo.toml  README.md  index.html  index.js
benches/: image_analysis.rs
src/: lib.rs  main.rs  wasm.rs
src/camera/: analysis.rs  mod.rs
src/widgets/: cam_picker.rs  fps.rs  mod.rs  webcam.rs
